--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
     "@heroicons/react": "^2.0.18",
     "axios": "^1.5.1",
     "express": "^4.18.2",
+    "flowbite": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/node": "^20.10.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "postcss-loader": "^7.3.3",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "webpack": "^5.88.2",
